<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Sign up"
      android:layout_marginLeft="80dp"
      android:textSize="40sp"
      android:textColor="#000000"
      />

  <EditText
      android:id="@+id/email_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="150dp"
      android:hint="@string/btn_email_login"
      android:inputType="text" />

  <EditText
      android:id="@+id/pass_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:hint="@string/btn_pass_login"
      android:inputType="textPassword" />


  <Button
      android:id="@+id/RegisterAcc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="40dp"
      android:background="#424242"
      android:text="@string/btn_sign_main"
      android:textColor="#FFFFFF" />

  <TextView
      android:id="@+id/SignUpAlert"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_Acc_main"
      android:textColor="#000000"
      android:textSize="15sp"
      android:layout_marginLeft="90dp"
      android:layout_marginTop="30dp"
      />


</LinearLayout>