<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#424242"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context="com.example.topnotch.Renter"
    tools:openDrawer="start">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#424242"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="top"
                android:src ="@drawable/logo" />


        </androidx.appcompat.widget.Toolbar>


    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
        android:id="@+id/map_in"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="110dp"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="@string/btn_del_renter"
        android:textAlignment="center"
        android:textSize="20sp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="180dp"
            android:weightSum="2"
            >


            <Button
                android:id="@+id/pick_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:background="#FFFFFF"
                android:text="@string/btn_pick_renter"
                android:drawableLeft="@drawable/ic_event_black_24dp"
                android:textAlignment="center"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/Drop_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#FFFFFF"
                android:text="@string/btn_drop_renter"
                android:drawableLeft="@drawable/ic_event_black_24dp"
                android:textAlignment="center"
                tools:ignore="ButtonStyle" />

        </LinearLayout>




    <Button
        android:id="@+id/Find_in"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:text="@string/btn_find_renter"
        android:textSize="20sp" />


</RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>



